--- a/home.html
+++ b/home.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title></title>
+	 <link rel="stylesheet" type="text/css" href="https://github.com/SMAKBO/tugas-labkom-2018-kemalcaesar/blob/master/css/bulma.css">
 </head>
 <body>
 
