--- a/index.html
+++ b/index.html
@@ -1,44 +1,107 @@
 <!DOCTYPE html>
-<html>
+<html>   
+<!-- buatc over-->
 <head>
-	<title></title>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Carvone</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha256-eZrrJcwDc/3uDhsdt61sL2oOBY362qM3lon1gyExkL0=" crossorigin="anonymous" />
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+  <!-- Bulma Version 0.6.0 -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.0/css/bulma.min.css" integrity="sha256-HEtF7HLJZSC3Le1HcsWbz1hDYFPZCqDhZa9QsCgVUdw=" crossorigin="anonymous" />
+  <style type="text/css">
+    html,body {
+      font-family: 'Open Sans';
+      background-color: lightgreen;
+    }
+   
+  </style>
 </head>
-<body>
-
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Navbar</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Dropdown
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
+<body> 
+  <section class="hero is-fullheight is-default is-bold">
+  <div class="hero-head">
+    <nav class="navbar">
+      <div class="container">
+        <div class="navbar-brand">
+          <a class="navbar-item" href="https://en.wikipedia.org/wiki/Carvone">
+            <img src="https://github.com/SMAKBO/tugas-labkom-2018-kemalcaesar/blob/master/img/CARVONE.png?raw=true" alt="Logo">
+          </a>
+          <span class="navbar-burger burger" data-target="navbarMenu">
+            <span>gvy</span>
+            <span>g y</span>
+            <span></span>
+          </span>
         </div>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
-      </li>
-    </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
+        <div id="navbarMenu" class="navbar-menu">
+          <div class="navbar-end">
+            <a class="navbar-item is-active" href="">
+              Uses
+            </a>
+            <a class="navbar-item " href="">
+              production
+            </a>
+            <a class="navbar-item">
+              history
+            </a>
+            <a class="navbar-item " >
+              Structure
+            </a>
+            <a class="navbar-item">
+              ethymologi
+
+              
+            </a>
+            <a class="navbar-item" href="">
+              About Us
+              
+            </a>
+          </div>
+        </div>
+      </div>
+    </nav>
   </div>
+    <div class="hero-body">
+      <div class="container has-text-centered">
+        <div class="columns is-vcentered">
+          <div class="column is-5">
+            <figure class="image is-4by3">
+              <img src="https://github.com/SMAKBO/tugas-labkom-2018-kemalcaesar/blob/master/img/Mint_leaves.jpg?raw=true" alt="Description" width="800" length="800" class="img">
+            </figure>
+          </div>
+          <div class="column is-6 is-offsehttps://en.wikipedia.org/wiki/Carvonet-1" >
+            <h1 class="title is-2" >
+              What is the carvone?
+            <h2 class="subtitle is-4">
+              mari bahas lebih lanjut
+            </h2>
+            <br>
+            <p class="has-text-centered">
+              <a class="button is-medium is-info is-outlined" href="https://smakbo.github.io/tugas-labkom-2018-kemalcaesar/definisi.html">
+                About Carvone
+              </a>
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="hero-foot">
+      <div class="container">
+        <div class="tabs is-centered">
+          <ul>
+            <li><a>powered by kemalcaesar</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </section>
+  <script async type="text/javascript" src="../js/bulma.js"></script>
+</body>
+</html>
+
+
+
 </nav>
 
 </body>
