--- a/definisi.html
+++ b/definisi.html
@@ -19,7 +19,7 @@
     <!-- START NAV -->
     <nav class="navbar is-info">
       <div class="navbar-brand">
-        <a class="navbar-item brand-text" href="../">
+        <a class="navbar-item brand-text" href="https://github.com/SMAKBO/tugas-labkom-2018-kemalcaesar/index.html">
           Home         
         </a>
         <div class="navbar-burger burger" data-target="navMenu">
@@ -96,93 +96,17 @@
                 <ul>
                   <li>2-Methyl-5-(prop-1-en-2-yl)cyclohex-2-enone.</li>
                   <li> 2-Methyl-5-(1-methylethenyl)-2-cyclohexenone Δ-p-Menthadien-2-one.</li>
-                  <li> 1-Methyl-4-isopropenyl-Δ-cyclohexen-2-oneCarvol (obsolete).
+                  <li> 1-Methyl-4-isopropenyl-Δ-cyclohexen-2-oneCarvol (obsolete).  </ul>
 
 
-</li>
-
-                </ul>
                 <h3 class="has-text-centered">powered by Aura</h3>
-                <p> Molestie ac feugiat sed lectus vestibulum. Feugiat sed lectus vestibulum mattis. Volutpat diam ut venenatis tellus in metus vulputate. Feugiat in fermentum posuere urna nec. Pharetra convallis posuere morbi leo urna molestie at. Accumsan lacus vel facilisis volutpat est velit egestas. Fermentum leo vel orci porta. Faucibus interdum posuere lorem ipsum.
-                </p>
+                
               </div>
             </div>
           </div>
           <!-- END ARTICLE -->
 
-          <!-- START ARTICLE -->
-          <div class="card article">
-            <div class="card-content">
-              <div class="media">
-                <div class="media-center">
-                    <img src="http://www.radfaces.com/images/avatars/skeeter-valentine.jpg" class="author-image" alt="Placeholder image">
-                </div>
-                <div class="media-content has-text-centered">
-                  <p class="title article-title">Sapien eget mi proin sed 🙌</p>
-                  <p class="subtitle is-6 article-subtitle">
-                    <a href="#">@skeetskeet</a> on October 7, 2017
-                  </p>
-                </div>
-              </div>
-            <div class="content article-body">
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Accumsan lacus vel facilisis volutpat est velit egestas. Sapien eget mi proin sed. Sit amet mattis vulputate enim. 
-              </p>
-              <p>
-              Commodo ullamcorper a lacus vestibulum sed arcu. Fermentum leo vel orci porta non. Proin fermentum leo vel orci porta non pulvinar. Imperdiet proin fermentum leo vel. Tortor posuere ac ut consequat semper viverra. Vestibulum lectus mauris ultrices eros. </p>
-              <h3 class="has-text-centered">Lectus vestibulum mattis ullamcorper velit sed ullamcorper morbi. Cras tincidunt lobortis feugiat vivamus.</h3> 
-              <p>
-                In eu mi bibendum neque egestas congue quisque egestas diam. Enim nec dui nunc mattis enim ut tellus. Ut morbi tincidunt augue interdum velit euismod in. At in tellus integer feugiat scelerisque varius morbi enim nunc. Vitae suscipit tellus mauris a diam. Arcu non sodales neque sodales ut etiam sit amet.
-              </p>
-              </div>
-            </div>
-          </div>
-          <!-- END ARTICLE -->
-
-          <!-- START PROMO BLOCK -->
-          <section class="hero is-info is-bold is-small promo-block">
-            <div class="hero-body">
-              <div class="container">
-                <h1 class="title">
-                  <i class="fa fa-bell-o"></i> 
-                   Lorem dolor sed viverra
-                </h1>
-                <h2 class="subtitle">
-                  Consequat id porta nibh venenatis cras sed felis eget
-                </h2>
-              </div>
-            </div>
-          </section>
-          <!-- END PROMO BLOCK -->
-
-          <!-- START ARTICLE -->
-          <div class="card article">
-            <div class="card-content">
-              <div class="media">
-                <div class="media-center">
-                    <img src="http://www.radfaces.com/images/avatars/garth-algar.jpg" class="author-image" alt="Placeholder image">
-                </div>
-                <div class="media-content has-text-centered">
-                  <p class="title article-title">Cras tincidunt lobortis feugiat vivamus.</p>
-                  <p class="subtitle is-6 article-subtitle">
-                    <a href="#">@galgar</a> on October 7, 2017
-                  </p>
-                </div>
-              </div>
-            <div class="content article-body">
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Accumsan lacus vel facilisis volutpat est velit egestas. Sapien eget mi proin sed. Sit amet mattis vulputate enim. 
-              </p>
-              <p>
-              Commodo ullamcorper a lacus vestibulum sed arcu. Fermentum leo vel orci porta non. Proin fermentum leo vel orci porta non pulvinar. Imperdiet proin fermentum leo vel. Tortor posuere ac ut consequat semper viverra. Vestibulum lectus mauris ultrices eros. </p>
-              <h3 class="has-text-centered">Lectus vestibulum mattis ullamcorper velit sed ullamcorper morbi. Cras tincidunt lobortis feugiat vivamus.</h3> 
-              <p>
-                In eu mi bibendum neque egestas congue quisque egestas diam. Enim nec dui nunc mattis enim ut tellus. Ut morbi tincidunt augue interdum velit euismod in. At in tellus integer feugiat scelerisque varius morbi enim nunc. Vitae suscipit tellus mauris a diam. Arcu non sodales neque sodales ut etiam sit amet.
-              </p>
-              </div>
-            </div>
-          </div>
-          <!-- END ARTICLE -->
+          
     </section>
     <!-- END ARTICLE FEED -->
   </div>
