--- a/definisi.html
+++ b/definisi.html
@@ -91,15 +91,16 @@
             <div class="content article-body">
                 <p>Carvone is a member of a family of chemicals called terpenoids. Terpen are a large and diverse class of organic compounds, produced by a variety of plants, particularly conifers, and by some insects such as termites or swallowtail butterflies, which emit terpenes from their osmeteria. They often have a strong odor and may protect the plants that produce them by deterring herbivores and by attracting predators and parasites of herbivores. </p>
                 <p> The difference between terpenes and terpenoids is that terpenes are hydrocarbons, whereas terpenoids contain additional functional groups. When terpenes are modified chemically, such as by oxidation or rearrangement of the carbon skeleton, the resulting compounds are generally referred to as terpenoids. Some authors will use the term terpene to include all terpenoids. Terpenoids are also known as isoprenoids.</p>
-                <p>Terpenes and terpenoids are the primary constituents of the essential oils of many types of medicinal plants and flowers. Essential oils are used widely as fragrances in perfumery, and in medicine and alternative medicines such as aromatherapy. Synthetic variations and derivatives of natural terpenes and terpenoids also greatly expand the variety of aromas used in perfumery and flavors used in food additives. Vitamin A is a terpenoid. That is that causes Carvone is found naturally in many essential oils, but is most abundant in the oils from seeds of caraway (Carum carvi), spearmint (Mentha spicata), and etc.</p>
+                <p>Terpenes and terpenoids are the primary constituents of the essential oils of many types of medicinal plants and flowers. Essential oils are used widely as fragrances in perfumery, and in medicine and alternative medicines such as aromatherapy. Terpenes are derived biosynthetically from units of isoprene, which has the molecular formula C5H8.Synthetic variations and derivatives of natural terpenes and terpenoids also greatly expand the variety of aromas used in perfumery and flavors used in food additives. Vitamin A is a terpenoid. That is that causes Carvone is found naturally in many essential oils, but is most abundant in the oils from seeds of caraway (Carum carvi), spearmint (Mentha spicata), and etc.</p>
                 <p>Like an organic compound in general, Carvone also has an IUPAC’s name that is 2-Methyl-5-(prop-1-en-2-yl)cyclohex-2-en-1-one. And also the others name others name such as:</p>
                 <ul>
                   <li>2-Methyl-5-(prop-1-en-2-yl)cyclohex-2-enone.</li>
                   <li> 2-Methyl-5-(1-methylethenyl)-2-cyclohexenone Δ-p-Menthadien-2-one.</li>
                   <li> 1-Methyl-4-isopropenyl-Δ-cyclohexen-2-oneCarvol (obsolete).  </ul>
+                 <p></p>
 
 
-                <h3 class="has-text-centered">powered by Aura</h3>
+                <h3 class="has-text-centered">Powered by Aura Putri A</h3>
                 
               </div>
             </div>
