--- a/Etymology.html
+++ b/Etymology.html
@@ -78,7 +78,7 @@
             <div class="card-content">
               <div class="media">
                 <div class="media-center">
-                    <img src="https://github.com/SMAKBO/tugas-labkom-2018-kemalcaesar/blob/master/img/Carvone-2D-structure-CT1000690902.png?raw=true" class="author-image" alt="Placeholder image">
+                    <img src="https://github.com/SMAKBO/tugas-labkom-2018-kemalcaesar/blob/master/img/mint-in-pots.jpg" class="author-image" alt="Placeholder image">
                 </div>
                 <div class="media-content has-text-centered">
                   <p class="title article-title">Why 'Carvone' ?</p>
