--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 </head>
 <body> 
   <section class="hero is-fullheight is-default is-bold">
+
+    <!-- Bar Navigasi dimulai -->
   <div class="hero-head">
     <nav class="navbar">
       <div class="container">
@@ -39,21 +41,25 @@
             <a class="navbar-item is-active" href="">
               Uses
             </a>
-            <a class="navbar-item " href="">
-              production
+            <a class="navbar-item is-active" href="">
+              Production
             </a>
-            <a class="navbar-item">
-              history
+            <a class="navbar-item is-active" href="">
+              History
             </a>
-            <a class="navbar-item " >
+            <a class="navbar-item is-active" href="">
               Structure
             </a>
-            <a class="navbar-item">
-              ethymologi
-
-              
+            <a  class="navbar-item is-active" href="">
+              Properties
             </a>
-            <a class="navbar-item" href="">
+            <a class="navbar-item is-active" href="">
+              Ethymologi
+            </a>
+            <a class="navbar-item is-active" href="">
+              Enantiomers
+            </a>
+            <a class="navbar-item is-active" href="">
               About Us
               
             </a>
@@ -62,6 +68,8 @@
       </div>
     </nav>
   </div>
+  <!-- Bar Navigasi selesai -->
+
     <div class="hero-body">
       <div class="container has-text-centered">
         <div class="columns is-vcentered">
