--- a/benefit.html
+++ b/benefit.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
  <html>
  <head>
--<body background="img/lab3.png">
-+<body background="img/bc2.jpg">
- 
- 	<title>Carvone In the daily life</title>
+
+<body background="img/bc2.jpg">
+ 	<title>Purpose In Daily Life</title>
  	<link rel="stylesheet" type="text/css" href="">
  	<style type="text/css">
  	</style>
  
  </head>
- <body style="background-color: #ffcc99; margin: 20px; border-color: red">
  
  <H1 align="center"><marquee scrollamount=”10”>Usefull Carvone</marquee></H1>
  <div class="parallax; style= "></div> 
- <center><img src="img/download.png" style="width:250px;height:300px; margin-left: 50px">
+ <center><img src="https://github.com/SMAKBO/tugas-labkom-2018-kemalcaesar/blob/master/download.png?raw=true.png" style="width:250px;height:300px; margin-left: 50px">
  
  
  	<p style= "font-size: 22px ; text-decoration: underline"> Uses of Carvone </p>
@@ -22,8 +20,8 @@
  	
  	<p style= "font-size: 22px ; text-decoration: underline"> Carvone in Food </p>
  	<p style="text-align: justify; text-indent: 0.5in; font-family: Calibri ; background-color: #FFF0F5 ; font-size: 20px">It has been used in food for over millennia. The very famous Wrigley's Spearmint Gum uses natural spearmint oil that has been extracted from Mentha spicata, and the other spearmint flavored Life Savers use the same. Carvone that has been extracted from dill and caraway have also been in use in the food industry. The famous European drink Kummel is created with a mixture of an extract from caraway and alcohol.</p>
- 	<p><img src="img/images.jpg" style="float:left;width:250px;height:300px; margin-right: 50px"></p>
- 	<img src="img/mintt.jpg" style="float:center;width:250px;height:300px; margin-left: 50px">
+ 	<p><img src="https://github.com/SMAKBO/tugas-labkom-2018-kemalcaesar/blob/master/images.jpg?raw=true.jpg" style="float:left;width:250px;height:300px; margin-right: 50px"></p>
+ 	<img src="https://github.com/SMAKBO/tugas-labkom-2018-kemalcaesar/blob/master/mintt.jpg?raw=true" style="float:center;width:250px;height:300px; margin-left: 50px">
  
  	<p style= "font-size: 22px; text-decoration: underline">Carvone in Agriculture</p>
  	<p style="text-align: justify; text-indent: 0.5in; font-family: Calibri ; background-color: #FFF0F5 ; font-size: 20px"> It is commonly used in Netherlands to prevent the sprouting of potatoes that have been kept in storage. A study was conducted to understand the antifungal activity of carvone on potato tubers and other plant diseases, it was also meant to analyze the suppression of sprout in potatoes. The results suggested that during in-vitro experiments, carvone exhibited antifungal activity towards various fungal species. Thus carvone has taken the trade name talent to serve as an antifungal agent in the treatment of potato tubers in Netherlands.</p>
@@ -34,6 +32,7 @@
  	<p style= "font-size: 22px; text-decoration: underline">Carvone as a Relaxant</p>
  	<p style="text-align: justify; text-indent: 0.5in; font-family: Calibri ; background-color: #FFF0F5 ; font-size: 20px"> Carvone is a major constituent of the oil extracted from the caraway seed and is seen in huge quantities with a percentage as far as 99%. As a relaxant it helps relieve from stress, emotional exhaustion, and clear respiratory tracts by acting as an expectorant in the treatment of coughs, bronchitis, and bronchial asthma. In the treatment of laryngitis and sore throats it helps by flushing out the toxins to aid in a speedy recovery. It aids in relaxing the digestive system and in the treatment of stomach colic, gastric spasms, flatulence, and nervous digestion. It is also used in clearing the urinary tract as well.</p>
  
+
  </body>
  </html>
  
