--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
         <div id="navbarMenu" class="navbar-menu">
           <div class="navbar-end">
-            <a class="navbar-item is-active" href="">
+            <a class="navbar-item is-active" href="kemalcaesar/benefit.html">
               Uses
             </a>
             <a class="navbar-item is-active" href="">
@@ -53,7 +53,7 @@
             <a  class="navbar-item is-active" href="">
               Properties
             </a>
-            <a class="navbar-item is-active" href="">
+            <a class="navbar-item is-active" href="kemalcaesar/Ethymologi.html">
               Ethymologi
             </a>
             <a class="navbar-item is-active" href="">
