--- a/history.html
+++ b/history.html
@@ -45,7 +45,7 @@
            structure
           </a>
           <a class="navbar-item" href="">
-            Ethymologi
+            History of Carvone
           </a>
         </div>
       </div>
@@ -78,12 +78,12 @@
             <div class="card-content">
               <div class="media">
                 <div class="media-center">
-                    <img src="https://github.com/SMAKBO/tugas-labkom-2018-kemalcaesar/blob/master/img/Carvone-2D-structure-CT1000690902.png?raw=true" class="author-image" alt="Placeholder image">
+                  <center>  <img src="https://github.com/SMAKBO/tugas-labkom-2018-kemalcaesar/blob/master/img/Carvone-2D-structure-CT1000690902.png?raw=true" class="author-image" alt="Placeholder image"> </center>
                 </div>
                 <div class="media-content has-text-centered">
                   <p class="title article-title">what is carvone...?</p>
                   <p class="subtitle is-6 article-subtitle">
-                    <a href="#">@d</a> on October 7, 2017
+                    <a href="#">@d</a> on march 8<sup>th</sup>, 2018
                   </p>
                 </div>
               </div>
