--- a/history.html
+++ b/history.html
@@ -81,17 +81,15 @@
                   <center>  <img src="https://github.com/SMAKBO/tugas-labkom-2018-kemalcaesar/blob/master/img/Carvone-2D-structure-CT1000690902.png?raw=true" class="author-image" alt="Placeholder image"> </center>
                 </div>
                 <div class="media-content has-text-centered">
-                  <p class="title article-title">what is carvone...?</p>
+                  <p class="title article-title">What Is History of Carvone????</p>
                   <p class="subtitle is-6 article-subtitle">
-                    <a href="#">@d</a> on march 8<sup>th</sup>, 2018
                   </p>
                 </div>
               </div>
 
             <div class="content article-body">
-                <p>Caraway was used for medicinal purposes by the ancient Romans,[3] but carvone was probably not isolated as a pure compound until Franz Varrentrapp (1815–1877) obtained it in 1849.[2][13] It was originally called carvol by Schweizer. Goldschmidt and Zürrer identified it as a ketone related to limonene,[14] and the structure was finally elucidated by Georg Wagner (1849–1903) in 1894. </p>
-                <p> English use of the term caraway dates back to at least 1440,[8] and is considered by Walter William Skeat to be of Arabic origin, though Gernot Katzer believes the Arabic al-karawya كراوية (cf. Spanish alcaravea) to be derived from the Latin carum.[7]</p>
-
+                <p>Caraway was used for medicinal purposes by the ancient Romans, but carvone was probably not isolated as a pure compound until Franz Varrentrapp (1815–1877) obtained it in 1849.It was originally called carvol by Schweizer. Goldschmidt and Zürrer identified it as a ketone related to limonene,[14] and the structure was finally elucidated by Georg Wagner (1849–1903) in 1894. </p>
+                
                <p> Carvone, given by the IUPAC name 2-Methyl-5-(1-methylethenyl)-2-cyclohexenone and Chemical Abstract Service number 2244-16-8, is a member of the family of chemicals called terpenoids. Caraway, whose molecular weight is 150.22 g / mol, has a boiling point of 231 °C and melting point of 22.5 °C and a density of .91 g/ ml. Its seeds are brown with a rough appearance and texture and its oil is a pale yellow/ translucent liquid. When in oil form it is normally soluble in alcohol and oils but rather insoluble in water (MSDS Caraway).</p>
 
                <p>Quite possibly the oldest known spice, the seed of the Carum carvi plant is known commonly as caraway. Ancient Egyptian cultures used caraway seed for religious purposes, and it was believed to be a part of the mummification process. The Romans ate caraway seeds after meals to freshen the breath, and the seed was also commonly added to foods to preserve their shelf life. Caraway seed was mentioned by many dieticians of the time as the digestive of choice.It may come as no surprise that one of the largest reasons caraway seed is harvested in the modern era is for its use as a digestive. Today, it is commonly used in Central European and Indian recipes; to flavor dishes and facilitate digestion.</p>
