--- a/benefit.html
+++ b/benefit.html
@@ -2,7 +2,7 @@
  <html>
  <head>
 
-<body background="img/bc2.jpg">
+<body background="https://github.com/SMAKBO/tugas-labkom-2018-kemalcaesar/blob/master/bc2.jpg?raw=truejpg">
  	<title>Purpose In Daily Life</title>
  	<link rel="stylesheet" type="text/css" href="">
  	<style type="text/css">
