--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
         </div>
         <div id="navbarMenu" class="navbar-menu">
           <div class="navbar-end">
-            <a class="navbar-item is-active" href="benefit.html">
+            <a class="navbar-item is-active" href="">
               Uses
             </a>
             <a class="navbar-item is-active" href="">
               Production
             </a>
-            <a class="navbar-item is-active" href="">
+            <a class="navbar-item is-active" href="https://smakbo.github.io/tugas-labkom-2018-kemalcaesar/history.html">
               History
             </a>
             <a class="navbar-item is-active" href="">
