--- a/index.html
+++ b/index.html
@@ -53,7 +53,239 @@
             <a  class="navbar-item is-active" href="">
               Properties
             </a>
-            <a class="navbar-item is-active" href="Ethymologi.html">
+            <a class="navbar-item is-active" href="<!DOCTYPE html>
+<html>   
+<!-- buat cover-->
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Carvone</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha256-eZrrJcwDc/3uDhsdt61sL2oOBY362qM3lon1gyExkL0=" crossorigin="anonymous" />
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+  <!-- Bulma Version 0.6.0 -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.0/css/bulma.min.css" integrity="sha256-HEtF7HLJZSC3Le1HcsWbz1hDYFPZCqDhZa9QsCgVUdw=" crossorigin="anonymous" />
+  <link rel="stylesheet" type="text/css" href="css/bulma.css">
+  <style type="text/css">
+    html,body {
+      font-family: 'Open Sans';
+      background-color: lightgreen;
+    }
+   
+  </style>
+</head>
+<body> 
+  <section class="hero is-fullheight is-default is-bold">
+
+    <!-- Bar Navigasi dimulai -->
+  <div class="hero-head">
+    <nav class="navbar">
+      <div class="container">
+        <div class="navbar-brand">
+          <a class="navbar-item" href="https://en.wikipedia.org/wiki/Carvone">
+            <img src="https://github.com/SMAKBO/tugas-labkom-2018-kemalcaesar/blob/master/img/CARVONE.png?raw=true" alt="Logo">
+          </a>
+          <span class="navbar-burger burger" data-target="navbarMenu">
+            <span>gvy</span>
+            <span>g y</span>
+            <span></span>
+          </span>
+        </div>
+        <div id="navbarMenu" class="navbar-menu">
+          <div class="navbar-end">
+            <a class="navbar-item is-active" href="">
+              Uses
+            </a>
+            <a class="navbar-item is-active" href="">
+              Production
+            </a>
+            <a class="navbar-item is-active" href="https://smakbo.github.io/tugas-labkom-2018-kemalcaesar/history.html">
+              History
+            </a>
+            <a class="navbar-item is-active" href="">
+              Structure
+            </a>
+            <a  class="navbar-item is-active" href="">
+              Properties
+            </a>
+            <a class="navbar-item is-active" href="<!DOCTYPE html>
+<html>   
+<!-- buat cover-->
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Carvone</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha256-eZrrJcwDc/3uDhsdt61sL2oOBY362qM3lon1gyExkL0=" crossorigin="anonymous" />
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+  <!-- Bulma Version 0.6.0 -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.0/css/bulma.min.css" integrity="sha256-HEtF7HLJZSC3Le1HcsWbz1hDYFPZCqDhZa9QsCgVUdw=" crossorigin="anonymous" />
+  <link rel="stylesheet" type="text/css" href="css/bulma.css">
+  <style type="text/css">
+    html,body {
+      font-family: 'Open Sans';
+      background-color: lightgreen;
+    }
+   
+  </style>
+</head>
+<body> 
+  <section class="hero is-fullheight is-default is-bold">
+
+    <!-- Bar Navigasi dimulai -->
+  <div class="hero-head">
+    <nav class="navbar">
+      <div class="container">
+        <div class="navbar-brand">
+          <a class="navbar-item" href="https://en.wikipedia.org/wiki/Carvone">
+            <img src="https://github.com/SMAKBO/tugas-labkom-2018-kemalcaesar/blob/master/img/CARVONE.png?raw=true" alt="Logo">
+          </a>
+          <span class="navbar-burger burger" data-target="navbarMenu">
+            <span>gvy</span>
+            <span>g y</span>
+            <span></span>
+          </span>
+        </div>
+        <div id="navbarMenu" class="navbar-menu">
+          <div class="navbar-end">
+            <a class="navbar-item is-active" href="">
+              Uses
+            </a>
+            <a class="navbar-item is-active" href="">
+              Production
+            </a>
+            <a class="navbar-item is-active" href="https://smakbo.github.io/tugas-labkom-2018-kemalcaesar/history.html">
+              History
+            </a>
+            <a class="navbar-item is-active" href="">
+              Structure
+            </a>
+            <a  class="navbar-item is-active" href="">
+              Properties
+            </a>
+            <a class="navbar-item is-active" href="Etymology.html">
+              Ethymologi
+            </a>
+            <a class="navbar-item is-active" href="">
+              Enantiomers
+            </a>
+            <a class="navbar-item is-active" href="">
+              About Us
+              
+            </a>
+          </div>
+        </div>
+      </div>
+    </nav>
+  </div>
+  <!-- Bar Navigasi selesai -->
+
+    <div class="hero-body">
+      <div class="container has-text-centered">
+        <div class="columns is-vcentered">
+          <div class="column is-5">
+            <figure class="image is-4by3">
+              <img src="https://github.com/SMAKBO/tugas-labkom-2018-kemalcaesar/blob/master/img/Mint_leaves.jpg?raw=true" alt="Description" width="800" length="800" class="img">
+            </figure>
+          </div>
+          <div class="column is-6 is-offsehttps://en.wikipedia.org/wiki/Carvonet-1" >
+            <h1 class="title is-2" >
+              What is the carvone?
+            <h2 class="subtitle is-4">
+              mari bahas lebih lanjut
+            </h2>
+            <br>
+            <p class="has-text-centered">
+              <a class="button is-medium is-info is-outlined" href="https://smakbo.github.io/tugas-labkom-2018-kemalcaesar/definisi.html">
+                About Carvone
+              </a>
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="hero-foot">
+      <div class="container">
+        <div class="tabs is-centered">
+          <ul>
+            <li><a>powered by kemalcaesar</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </section>
+  <script async type="text/javascript" src="../js/bulma.js"></script>
+</body>
+</html>
+
+
+
+</nav>
+
+</body>
+</html>">
+              Ethymologi
+            </a>
+            <a class="navbar-item is-active" href="">
+              Enantiomers
+            </a>
+            <a class="navbar-item is-active" href="">
+              About Us
+              
+            </a>
+          </div>
+        </div>
+      </div>
+    </nav>
+  </div>
+  <!-- Bar Navigasi selesai -->
+
+    <div class="hero-body">
+      <div class="container has-text-centered">
+        <div class="columns is-vcentered">
+          <div class="column is-5">
+            <figure class="image is-4by3">
+              <img src="https://github.com/SMAKBO/tugas-labkom-2018-kemalcaesar/blob/master/img/Mint_leaves.jpg?raw=true" alt="Description" width="800" length="800" class="img">
+            </figure>
+          </div>
+          <div class="column is-6 is-offsehttps://en.wikipedia.org/wiki/Carvonet-1" >
+            <h1 class="title is-2" >
+              What is the carvone?
+            <h2 class="subtitle is-4">
+              mari bahas lebih lanjut
+            </h2>
+            <br>
+            <p class="has-text-centered">
+              <a class="button is-medium is-info is-outlined" href="https://smakbo.github.io/tugas-labkom-2018-kemalcaesar/definisi.html">
+                About Carvone
+              </a>
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="hero-foot">
+      <div class="container">
+        <div class="tabs is-centered">
+          <ul>
+            <li><a>powered by kemalcaesar</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </section>
+  <script async type="text/javascript" src="../js/bulma.js"></script>
+</body>
+</html>
+
+
+
+</nav>
+
+</body>
+</html>">
               Ethymologi
             </a>
             <a class="navbar-item is-active" href="">
