--- a/index.html
+++ b/index.html
@@ -68,17 +68,17 @@
             <a class="navbar-item is-active" href="">
               Production
             </a>
-            <a class="navbar-item is-active" href="https://smakbo.github.io/tugas-labkom-2018-kemalcaesar/history.html">
+            <a class="navbar-item is-active"history.html">
               History
             </a>
-            <a class="navbar-item is-active" href="">
+            <a class="navbar-item is-active" href="structure.html">
               Structure
             </a>
             <a  class="navbar-item is-active" href="">
               Properties
             </a>
-            <a class="navbar-item is-active" href="Ethymologi.html">
-              Ethymologi
+            <a class="navbar-item is-active" href="Etymology.html">
+              Etymology
             </a>
             <a class="navbar-item is-active" href="">
               Enantiomers
