--- a/index.html
+++ b/index.html
@@ -40,19 +40,20 @@
               Uses
             </a>
             <a class="navbar-item " href="">
-              production
+              properties
             </a>
-            <a class="navbar-item" href="https://smakbo.github.io/tugas-labkom-2018-kemalcaesar/history.html">
+            <a class="navbar-item" href="history.html">
               history
             </a>
-            <a class="navbar-item" href="https://smakbo.github.io/tugas-labkom-2018-kemalcaesar/manufacture.html">
+            <a class="navbar-item" href="manufacture.html">
               Manufacture
             </a>
-            <a class="navbar-item " href="https://smakbo.github.io/tugas-labkom-2018-kemalcaesar/structure.html" >
+            <a class="navbar-item " href="structure.html" >
               Structure
             </a>
-            <a class="navbar-item" href="https://smakbo.github.io/tugas-labkom-2018-kemalcaesar/Etymology.html">
-              ethymologi</a>
+            <a class="navbar-item"Etymology.html">
+              ethymologi
+              </a>
             <a class="navbar-item" href="">
               About Us
             </a>
