--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <a class="navbar-item " href="structure.html" >
               Structure
             </a>
-            <a class="navbar-item"Etymology.html">
+            <a class="navbar-item" href="Etymology.html">
               ethymologi
               </a>
             <a class="navbar-item" href="">
