--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <a class="navbar-item is-active" href="">
               Uses
             </a>
-            <a class="navbar-item " href="">
+            <a class="navbar-item " href="properties.html">
               properties
             </a>
             <a class="navbar-item" href="history.html">
@@ -75,11 +75,11 @@
             <h1 class="title is-2" >
               What is the carvone?
             <h2 class="subtitle is-4">
-              mari bahas lebih lanjut
+              Let's Discuss about our material.
             </h2>
             <br>
             <p class="has-text-centered">
-              <a class="button is-medium is-info is-outlined" href="https://smakbo.github.io/tugas-labkom-2018-kemalcaesar/definisi.html">
+              <a class="button is-medium is-info is-outlined" href="definisi.html">
                 About Carvone
               </a>
             </p>
@@ -101,5 +101,3 @@
   <script async type="text/javascript" src="../js/bulma.js"></script>
 </body>
 </html>
-
-
