--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
         <div id="navbarMenu" class="navbar-menu">
           <div class="navbar-end">
-            <a class="navbar-item is-active" href="">
+            <a class="navbar-item is-active" href="uses.html">
               Uses
             </a>
             <a class="navbar-item " href="properties.html">
