--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <a class="navbar-item" href="Etymology.html">
               ethymologi
               </a>
-            <a class="navbar-item" href="">
+            <a class="navbar-item" href="about us.html">
               About Us
             </a>
 
