--- a/structure.html
+++ b/structure.html
@@ -30,23 +30,25 @@
       </div>
       <div id="navMenu" class="navbar-menu">
         <div class="navbar-start">
-          <a class="navbar-item" href="#">
-            Uses
-            
-          </a>
-          <a class="navbar-item" href="#">
-            Production
-            
-          </a>
-          <a class="navbar-item" href=""> 
-            History
-          </a>
-          <a class="navbar-item" href="">
-           Structure
-          </a>
-          <a class="navbar-item" href="">
-            Etymology
-          </a>
+          <a class="navbar-item is-active" href="uses.html">
+              Uses
+            </a>
+            <a class="navbar-item " href="properties.html">
+              properties
+            </a>
+            <a class="navbar-item" href="history.html">
+              history
+            </a>
+            <a class="navbar-item" href="manufacture.html">
+              Manufacture
+            </a>
+            <a class="navbar-item" href="Etymology.html">
+              ethymologi
+              </a>
+            <a class="navbar-item" href="about us.html">
+              About Us
+            </a>
+
         </div>
       </div>
     </nav>
