--- a/properties.html
+++ b/properties.html
@@ -16,21 +16,16 @@
 </style>
 <body>
   <div class="container">
-    <!-- START NAV -->
+    <!-- ini buat Navigasi-->
     <nav class="navbar is-info">
       <div class="navbar-brand">
         <a class="navbar-item brand-text" href="index.html">
           Home         
         </a>
-        <div class="navbar-burger burger" data-target="navMenu">
-          <span></span>
-          <span></span>
-          <span></span>
-        </div>
       </div>
       <div id="navMenu" class="navbar-menu">
         <div class="navbar-start">
-            <a class="navbar-item" href="">
+            <a class="navbar-item" href="uses.html">
               Uses
             </a>
             <a class="navbar-item" href="history.html">
@@ -45,20 +40,20 @@
             <a class="navbar-item" href="Etymology.html">
               ethymologi
               </a>
-            <a class="navbar-item" href="">
+            <a class="navbar-item" href="about us.html">
               About Us
             </a>
 
           </div>
       </div>
     </nav>
-    <!-- END NAV -->
+    <!-- kodenya sampe sini-->
 
     <!-- START ARTICLE FEED -->
     <section class="articles">
         <div class="column is-8 is-offset-2">
 
-          <!-- START PROMO BLOCK -->
+          <!-- yang ini promo block-->
           <section  class="hero is-info is-bold is-small promo-block">
             <div class="hero-body ">
               <div class="container">
@@ -73,9 +68,9 @@
               </div>
             </div>
           </section>
-          <!-- END PROMO BLOCK -->
+          <!-- kodenya sampe sini  (promo blok)  -->
 
-          <!-- START ARTICLE -->
+          <!--Buat artikel -->
           <div class="card article">
             <div class="card-content">
               <div class="media">
@@ -110,11 +105,11 @@
               </div>
             </div>
           </div>
-          <!-- END ARTICLE -->
+          <!-- end artikel -->
 
           
     </section>
-    <!-- END ARTICLE FEED -->
+    <!-- end feed-->
   </div>
   <script async type="text/javascript" src="../js/bulma.js"></script>
 </body>
