--- a/uses.html
+++ b/uses.html
@@ -16,7 +16,7 @@
 </style>
 <body>
   <div class="container">
-    <!-- START NAV -->
+    <!-- buat navigasi  -->
     <nav class="navbar is-info">
       <div class="navbar-brand">
         <a class="navbar-item brand-text" href="index.html">
@@ -53,13 +53,13 @@
           </div>
       </div>
     </nav>
-    <!-- END NAV -->
+    <!-- kodenya navigasi sampai sini -->
 
-    <!-- START ARTICLE FEED -->
+    <!--feed article -->
     <section class="articles">
         <div class="column is-8 is-offset-2">
 
-          <!-- START PROMO BLOCK -->
+          <!-- buat promo block-->
           <section  class="hero is-info is-bold is-small promo-block">
             <div class="hero-body ">
               <div class="container">
@@ -74,9 +74,9 @@
               </div>
             </div>
           </section>
-          <!-- END PROMO BLOCK -->
+          <!-- kode promo blocknya sampe sini-->
 
-          <!-- START ARTICLE -->
+          <!-- yang ini artikel -->
           <div class="card article">
             <div class="card-content">
               <div class="media">
@@ -118,11 +118,11 @@
               </div>
             </div>
           </div>
-          <!-- END ARTICLE -->
+          <!--  end  -->
 
           
     </section>
-    <!-- END ARTICLE FEED -->
+    <!-- end article -->
   </div>
   <script async type="text/javascript" src="../js/bulma.js"></script>
 </body>
