--- a/about us.html
+++ b/about us.html
@@ -111,7 +111,7 @@ body { background-color: lightgreen; }
               <!-- ini yang jafar-->
               <h4>M.ja'far Shodik </h4>
               <p>Hello guys my name is jafar , in this group my job is same like kemal , i am the programmer to</p>
-              <p><a href="https://mjafars.github.io/">About me</a></p> <!-- href nya diisi alamat github yang biodata itu -->
+              <p><a href="#">About me</a></p> <!-- href nya diisi alamat github yang biodata itu -->
             </div>
           </div>
         </div>
@@ -132,7 +132,10 @@ body { background-color: lightgreen; }
         </div>
       </div>
     </div>
-     <section class="container">
+
+
+
+    
     <div class="columns features">
       <div class="column is-4">
         <div class="card">
@@ -181,7 +184,7 @@ body { background-color: lightgreen; }
       </div>
     </div>
     
- <section class="container">
+
     <div class="columns features">
       <div class="column is-4">
         <div class="card">
@@ -193,7 +196,7 @@ body { background-color: lightgreen; }
               <!-- ini ola -->
               <h4>Aura Putri A </h4>
               <p>tinggal diisi deskripsi</p>
-              <p><a href="https://hoodiexoxo.github.io/">About me</a></p><!-- href nya diisi alamat github yang biodata itu -->
+              <p><a href="#">About me</a></p><!-- href nya diisi alamat github yang biodata itu -->
             </div>
           </div>
         </div>
