--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     html,body {
       font-family: 'Open Sans';
       background-color: lightgreen;
+      background-image: url("");
     }
    
   </style>
@@ -35,7 +36,7 @@
         </div>
         <div id="navbarMenu" class="navbar-menu">
           <div class="navbar-end">
-            <a class="navbar-item is-active" href="uses.html">
+            <a class="navbar-item is-active" href="">
               Uses
             </a>
             <a class="navbar-item " href="properties.html">
@@ -53,7 +54,7 @@
             <a class="navbar-item" href="Etymology.html">
               ethymologi
               </a>
-            <a class="navbar-item" href="about us.html">
+            <a class="navbar-item" href="">
               About Us
             </a>
 
