--- a/manufacture.html
+++ b/manufacture.html
@@ -16,7 +16,7 @@
 </style>
 <body>
   <div class="container">
-    <!-- START NAV -->
+    <!-- mulai navigasi -->
     <nav class="navbar is-info">
       <div class="navbar-brand">
         <a class="navbar-item brand-text" href="../">
@@ -29,29 +29,37 @@
         </div>
       </div>
       <div id="navMenu" class="navbar-menu">
-        <div class="navbar-start">
-          <a class="navbar-item" href="#">
-            Uses
-          </a>
-          <a class="navbar-item" href=""> 
-            History
-          </a>
-          <a class="navbar-item" href="">
-           Structure
-          </a>
-          <a class="navbar-item" href="">
-            Ethymologi
-          </a>
-        </div>
+        <div class="navbar-end">
+             <a class="navbar-item is-active" href="uses.html">
+              Uses
+            </a>
+            <a class="navbar-item " href="properties.html">
+              properties
+            </a>
+            <a class="navbar-item" href="history.html">
+              history
+            </a>
+            <a class="navbar-item " href="structure.html" >
+              Structure
+            </a>
+            <a class="navbar-item" href="Etymology.html">
+              ethymologi
+              </a>
+            <a class="navbar-item" href="about us.html">
+              About Us
+            </a>
+
+
+          </div>
       </div>
     </nav>
-    <!-- END NAV -->
+    <!-- akhir nav -->
 
-    <!-- START ARTICLE FEED -->
+    <!-- feed artikel -->
     <section class="articles">
         <div class="column is-8 is-offset-2">
 
-          <!-- START PROMO BLOCK -->
+          <!-- promo blok-->
           <section  class="hero is-info is-bold is-small promo-block">
             <div class="hero-body ">
               <div class="container">
@@ -66,9 +74,9 @@
               </div>
             </div>
           </section>
-          <!-- END PROMO BLOCK -->
+          <!-- akhir promo blok -->
 
-          <!-- START ARTICLE -->
+          <!-- staart artikel-->
           <div class="card article">
             <div class="card-content">
               <div class="media">
@@ -133,7 +141,7 @@
 
           <!-- sources: https://toxnet.nlm.nih.gov/cgi-bin/sis/search2/r?dbs+hsdb:@term+@rn+@rel+99-49-0 -->
 
-          <!-- END ARTICLE -->
+          <!-- akhir articles -->
 
     </section>
     <!-- END ARTICLE FEED -->
