--- a/index.html
+++ b/index.html
@@ -28,15 +28,10 @@
           <a class="navbar-item" href="https://en.wikipedia.org/wiki/Carvone">
             <img src="https://github.com/SMAKBO/tugas-labkom-2018-kemalcaesar/blob/master/img/CARVONE.png?raw=true" alt="Logo">
           </a>
-          <span class="navbar-burger burger" data-target="navbarMenu">
-            <span></span>
-            <span></span>
-            <span></span>
-          </span>
-        </div>
-        <div id="navbarMenu" class="navbar-menu">
+          </div>
+         <div id="navbarMenu" class="navbar-menu">
           <div class="navbar-end">
-            <a class="navbar-item is-active" href="">
+            <a class="navbar-item is-active" href="uses.html">
               Uses
             </a>
             <a class="navbar-item " href="properties.html">
@@ -54,7 +49,7 @@
             <a class="navbar-item" href="Etymology.html">
               ethymologi
               </a>
-            <a class="navbar-item" href="">
+            <a class="navbar-item" href="about us.html">
               About Us
             </a>
 
@@ -63,6 +58,9 @@
       </div>
     </nav>
   </div>
+
+
+
     <div class="hero-body">
       <div class="container has-text-centered">
         <div class="columns is-vcentered">
