--- a/about us.html
+++ b/about us.html
@@ -24,11 +24,7 @@ body { background-color: lightgreen; }
             <a class="navbar-item" href="../">
               <img src="https://github.com/SMAKBO/tugas-labkom-2018-kemalcaesar/blob/master/img/CARVONE.png?raw=true" alt="Logo">
             </a>
-            <span class="navbar-burger burger" data-target="navbarMenu">
-              <span > ffeafafaf</span>
-              <span> kemal </span>
-              <span> safaf </span>
-            </span>
+            
           </div>
           <div id="navbarMenu" class="navbar-menu">
             <div class="navbar-end">
@@ -44,7 +40,7 @@ body { background-color: lightgreen; }
               </a>
               <!-- sampe sini hiasannya-->
               <span class="navbar-item">
-                <a class="button is-white is-outlined is-small" href="https://github.com/dansup/bulma-templates/blob/master/templates/hero.html">
+                <a class="button is-white is-outlined is-small" href="#">
                   <span class="icon">
                     <i class="fa fa-github"></i>
                   </span>
