--- a/structure.html
+++ b/structure.html
@@ -19,14 +19,10 @@
     <!-- START NAV -->
     <nav class="navbar is-info">
       <div class="navbar-brand">
-        <a class="navbar-item brand-text" href="https://smakbo.github.io/tugas-labkom-2018-kemalcaesar/index.html">
+        <a class="navbar-item brand-text" href="index.html">
           Home         
         </a>
-        <div class="navbar-burger burger" data-target="navMenu">
-          <span></span>
-          <span></span>
-          <span></span>
-        </div>
+       
       </div>
       <div id="navMenu" class="navbar-menu">
         <div class="navbar-start">
