--- a/manufacture.html
+++ b/manufacture.html
@@ -17,20 +17,16 @@
 <body>
   <div class="container">
     <!-- mulai navigasi -->
-    <nav class="navbar is-info">
+   <nav class="navbar is-info">
       <div class="navbar-brand">
-        <a class="navbar-item brand-text" href="../">
+        <a class="navbar-item brand-text" href="index.html">
           Home         
         </a>
-        <div class="navbar-burger burger" data-target="navMenu">
-          <span></span>
-          <span></span>
-          <span></span>
-        </div>
+       
       </div>
       <div id="navMenu" class="navbar-menu">
-        <div class="navbar-end">
-             <a class="navbar-item is-active" href="uses.html">
+        <div class="navbar-start">
+          <a class="navbar-item is-active" href="uses.html">
               Uses
             </a>
             <a class="navbar-item " href="properties.html">
@@ -48,9 +44,7 @@
             <a class="navbar-item" href="about us.html">
               About Us
             </a>
-
-
-          </div>
+        </div>
       </div>
     </nav>
     <!-- akhir nav -->
