--- a/definisi.html
+++ b/definisi.html
@@ -29,10 +29,10 @@
               Uses
             </a>
             <a class="navbar-item " href=" properties.html">
-              properties
+              Properties
             </a>
             <a class="navbar-item" href="history.html">
-              history
+              History
             </a>
             <a class="navbar-item" href="manufacture.html">
               Manufacture
@@ -41,7 +41,7 @@
               Structure
             </a>
             <a class="navbar-item" href="Etymology.html">
-              ethymologi
+              Ethymologi
               </a>
             <a class="navbar-item" href="about us.html">
               About Us
